<resources>
<!--    <string name="kakao_app_key">560ac09a791a3e65b22adcbdd05880ad</string>-->
    <string name="kakao_app_key">b13cf61229fbc8f86a6dd5cc8cc6fe30</string>

    <string name="app_name">latte</string>
    <string name="app_title_today">오늘의</string>
    <string name="app_title_drunk_count">술,셈</string>
    <string name="bottom_action_home">홈</string>
    <string name="bottom_action_statistic">통계</string>

    <string name="all_double_quotes">&quot;%s&quot;</string>
    <string name="all_next">다음</string>
    <string name="all_complete">완료</string>
    <string name="all_modify">수정</string>


    <string name="main_drunk_bottle_count">나는 <font color='#33c182'>%s</font>정도 마셨어요 </string>
    <string name="main_drunk_amount">취한 정도는 <font color='#33c182'>%s</font></string>
    <string name="main_drunk_after_action">술마시고 <font color='#33c182'>%s</font></string>


    <string name="main_drunk_caffeine">섭취 음료 카페인</string>
    <string name="main_question_ti1red">힘들었어요:(</string>
    <string name="main_question_good">잘 맞았어요:(</string>
    <string name="main_recommend_caffeine">하루 카페인 %dmg \n을 추천합니다.</string>
    <string name="main_record">기록하기</string>

    <!--main detail-->
    <string name="main_detail_title">술 다이어리</string>
    <string name="main_detail_drunk">취함</string>
    <string name="main_detail_clean">숙취</string>
    <string name="main_detail_talk">주사</string>
    <string name="main_detail_amount">주량</string>
    <string name="main_detail_diary">일기</string>
    <string name="main_detail_photo">사진</string>




    <!--record-->
    <string name="record_title">기록하기</string>

    <!--record upload image-->
    <string name="record_image_mood">1. 그날의 분위기가 궁금해요.</string>
    <string name="record_image_max_count1">이미지 최대 갯수는 %d개 입니다.</string>

    <!--record detail-->
    <string name="record_detail_date">2. 날짜 및 그날의 음주상태를 설정해주세요</string>
    <string name="record_detail_date_hint">날짜 설정</string>
    <string name="record_detail_drunken_hint">취한 정도</string>
    <string name="record_detail_hangover_hint">숙취 정도</string>
    <string name="record_detail_sort_alcohol_hint">술 종류 &amp; 양</string>
    <string name="record_detail_date_btn_hint">여기를 눌러 날짜를 선택하세요.</string>
    <string name="record_detail_status">3. 그 날의 상태는 어땠나요?</string>

    <string name="record_detail_drunken_nothing">멀쩡함</string>
    <string name="record_detail_drunken_little">조금취함</string>
    <string name="record_detail_drunken_much">많이취함</string>
    <string name="record_detail_drunken_dog">댕댕이</string>
    <string name="record_detail_specific">종류 : </string>


    <!--record drunken-->
    <string name="record_detail_drunken">3. 후기를 써주세요!</string>
    <string name="record_detail_write_final">4. 그 날의 주사를 골라주세요!</string>
    <string name="record_detail_write_final_hint">ex. 누구와..마셨는지..(˵͡°͜ʖ͡°˵), 술은..달았는지..</string>
    <string name="record_detail_drunken_after_text">오늘밤 주인공은 나야! 나!</string>
    <string name="record_detail_drunken_after_text_watch">(%d / 300)</string>

    <string name="add_item_title">카페인 섭취 기록</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="caffeine_drink">카페인음료</string>
    <string name="total">합계</string>

    <string name="ok">완료</string>
    <string name="cancel">취소</string>


</resources>
