<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtDrunkenAfterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gmarket_sans_ttf_light"
        android:text="@string/record_detail_drunken"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDrunken"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        tools:listitem=""
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/txtDrunkenAfterTitle" />


    <TextView
        android:id="@+id/txtDrunkenFinalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/gmarket_sans_ttf_light"
        android:text="@string/record_detail_write_final"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/txtDrunkenAfterTitle"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewDrunken" />


    <EditText
        android:id="@+id/txtDetailStatusTitle"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_corner_circle_gray_transparent"
        android:fontFamily="@font/gmarket_sans_ttf_light"
        android:gravity="top"
        android:hint="@string/record_detail_write_final_hint"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/txtDrunkenAfterTitle"
        app:layout_constraintTop_toBottomOf="@id/txtDrunkenFinalTitle"
        tools:hint="@string/record_detail_write_final_hint" />

</androidx.constraintlayout.widget.ConstraintLayout>